add socket server

--- a/server/package.json
+++ b/server/package.json
@@ -29,11 +29,13 @@
   },
   "homepage": "https://github.com/ssb-shree/multiplayer-draw-and-guess-game-like-skribbl.io#readme",
   "devDependencies": {
+    "@types/socket.io": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
   }
 }
